--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,14 +1,5 @@
 {
-    "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.css": [
-      "prettier --write",
-      "stylelint --fix"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
-  }
-  
+  "*.{js,jsx,ts,tsx}": ["prettier --write", "eslint --fix"],
+  "*.css": ["prettier --write", "stylelint --fix"],
+  "*.{json,md}": ["prettier --write"]
+}
